--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "author": "Kidron",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "youtube-logo.png",
+    "default_icon": "cw-manage-logo.png",
     "default_popup": "index.html"
   },
   "permissions": []
